--- a/dpProject/dpProject.csproj
+++ b/dpProject/dpProject.csproj
@@ -7,4 +7,11 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Branch.cs" />
+    <Compile Remove="Disk.cs" />
+    <Compile Remove="Folder.cs" />
+    <Compile Remove="MyFile.cs" />
+  </ItemGroup>
+
 </Project>
